--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hi, I'm Mageshkannan Web developer based in  India">
+    <meta name="author" content="Mageshkannan Annathurai">
+    <meta name="keywords" content="Mageshkannan, Portfolio, Web Developer, React Developer">
+
     <title>Mageshkannan's Portfolio</title>
     <style>
       .loader{
